--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,10 @@
-<% content_for :title, "Account" %>
+<% content_for :title, t('.title', resource: devise_i18n_fix_model_name_case(resource.model_name.human, i18n_key: 'registrations.edit.title')) %>
 
 <div class="hero lg:min-h-screen bg-base-200">
   <div class="hero-content flex-col lg:flex-row-reverse gap-8">
     <div class="text-center lg:text-left">
-      <h1 class="text-3xl md:text-4xl font-bold">Account settings</h1>
-      <p class="py-2 text-base-content/70">Change your email or password below.</p>
+      <h1 class="text-3xl md:text-4xl font-bold"><%= t('.title', resource: devise_i18n_fix_model_name_case(resource.model_name.human, i18n_key: 'registrations.edit.title')) %></h1>
+      <p class="py-2 text-base-content/70"><%= t('.subtitle') %></p>
     </div>
 
     <div class="card w-full max-w-md shadow-lg bg-base-100">
@@ -20,40 +20,40 @@
           </div>
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
             <div class="form-control mb-4 w-full">
-              <p class="text-warning"> Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+              <p class="text-warning"><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></p>
             </div>
           <% end %>
 
           <div class="form-control mb-4">
             <%= f.label :password, class: "input w-full" do %>
-              <span class="label">New password</span>
-              <%= f.password_field :password, autocomplete: "new-password", placeholder: "(leave blank if you don't want to change)" %>
+              <span class="label"><%= resource.class.human_attribute_name(:password) %></span>
+              <%= f.password_field :password, autocomplete: "new-password", placeholder: "(#{t('.leave_blank_if_you_don_t_want_to_change_it')})" %>
             <% end %>
           </div>
 
           <div class="form-control mb-4">
             <%= f.label :password_confirmation, class: "input w-full" do %>
-              <span class="label">Confirm new password</span>
+              <span class="label"><%= resource.class.human_attribute_name(:password_confirmation) %></span>
               <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
             <% end %>
           </div>
 
           <div class="form-control mb-6">
             <%= f.label :current_password, class: "input w-full" do %>
-              <span class="label">Current password</span>
-              <%= f.password_field :current_password, autocomplete: "current-password", required: true, placeholder: "(required to save changes)" %>
+              <span class="label"><%= resource.class.human_attribute_name(:current_password) %></span>
+              <%= f.password_field :current_password, autocomplete: "current-password", required: true, placeholder: "(#{t('.we_need_your_current_password_to_confirm_your_changes')})" %>
             <% end %>
           </div>
 
           <div class="flex gap-2">
-            <%= f.submit "Update", class: "btn btn-primary flex-1" %>
-            <%= link_to "Cancel", root_path, class: "btn btn-neutral" %>
+            <%= f.submit t('.update'), class: "btn btn-primary flex-1" %>
+            <%= link_to t('devise.shared.links.back'), root_path, class: "btn btn-neutral" %>
           </div>
         <% end %>
 
         <div class="divider my-6"></div>
 
-        <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: "btn btn-error w-full"%>
+        <%= button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure'), turbo_confirm: t('.are_you_sure') }, method: :delete, class: "btn btn-error w-full"%>
       </div>
     </div>
   </div>
