--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,17 +1,23 @@
 <div class="flex flex-col gap-2 text-sm">
   <% if controller_name != 'sessions' %>
-    <%= link_to "Login", new_session_path(resource_name), class: "btn btn-soft btn-secondary w-full" %>
+    <%= link_to t(".sign_in"), new_session_path(resource_name), class: "btn btn-soft btn-secondary w-full" %>
   <% end %>
 
   <% if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Sign up", new_registration_path(resource_name), class: "btn btn-soft btn-secondary w-full" %>
+    <%= link_to t(".sign_up"), new_registration_path(resource_name), class: "btn btn-soft btn-secondary w-full" %>
   <% end %>
 
   <% if devise_mapping.recoverable? && controller_name != 'passwords' %>
-    <%= link_to "Forgot your password?", new_password_path(resource_name), class: "link" %>
+    <%= link_to t(".forgot_your_password"), new_password_path(resource_name), class: "link" %>
   <% end %>
 
   <% if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-    <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name), class: "link" %>
+    <%= link_to t('.didn_t_receive_confirmation_instructions'), new_confirmation_path(resource_name), class: "link" %>
   <% end %>
+
+  <%- if devise_mapping.omniauthable? %>
+  <%- resource_class.omniauth_providers.each do |provider| %>
+    <%= button_to t('.sign_in_with_provider', provider: OmniAuth::Utils.camelize(provider)), omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+  <% end %>
+<% end %>
 </div>
