--- a/app/views/components/navigation/_sidebar_overlay.html.erb
+++ b/app/views/components/navigation/_sidebar_overlay.html.erb
@@ -2,16 +2,17 @@
   <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
   <div class="bg-base-100 text-base-content min-h-full w-80 flex flex-col">
     <!-- User Header -->
-    <div class="p-6 bg-base-200 text-base-content">
+    <div class="relative p-6 bg-base-200 text-base-content">
+      <label for="my-drawer" aria-label="close sidebar" class="absolute top-3 right-3 btn btn-ghost btn-sm">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
+        </svg>
+      </label>
       <div class="flex items-center gap-3">
-        <div class="avatar">
-          <div class="w-12 rounded-full">
-            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" alt="User Avatar" />
-          </div>
-        </div>
+          <%= render 'components/user/avatar_thumb', user: current_user, width_class: 'w-12'%>
         <div>
-          <div class="font-semibold text-lg">John Doe</div>
-          <div class="text-sm opacity-90">john.doe@example.com</div>
+          <div class="font-semibold text-lg"><%= "#{current_user.first_name} #{current_user.last_name}"%></div>
+          <div class="text-xs opacity-90"><%= current_user.email %></div>
         </div>
       </div>
     </div>
@@ -19,28 +20,28 @@
     <ul class="menu flex-1 w-full p-4">
       <!-- Profile -->
       <li>
-        <a href="#" class="flex items-center gap-3 py-3">
+        <%= link_to edit_users_profile_path, class: "flex items-center gap-3 py-3" do %>
           <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
           </svg>
-          <span class="text-base">Profile</span>
-        </a>
+          <span class="text-base"><%= t('.profile') %></span>
+        <% end %>
       </li>
       <!-- Account -->
       <li>
-        <a href="#" class="flex items-center gap-3 py-3">
+        <%= link_to edit_user_registration_path, class: "flex items-center gap-3 py-3" do %>
           <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"></path>
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
           </svg>
-          <span class="text-base">Account</span>
-        </a>
+          <span class="text-base"><%= t('.account') %></span>
+        <% end %>
       </li>
     </ul>
     <!-- Theme Toggle -->
     <div class="p-4 border-t border-base-300" data-controller="theme">
       <div class="flex items-center justify-between">
-        <span class="text-sm">Dark Mode</span>
+        <span class="text-sm"><%= t('.dark_mode') %></span>
         <label class="toggle text-base-content">
           <input type="checkbox" class="theme-controller" data-theme-target="toggle" data-action="change->theme#toggle" />
           <svg aria-label="sun" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g stroke-linejoin="round" stroke-linecap="round" stroke-width="2" fill="none" stroke="currentColor"><circle cx="12" cy="12" r="4"></circle><path d="M12 2v2"></path><path d="M12 20v2"></path><path d="m4.93 4.93 1.41 1.41"></path><path d="m17.66 17.66 1.41 1.41"></path><path d="M2 12h2"></path><path d="M20 12h2"></path><path d="m6.34 17.66-1.41 1.41"></path><path d="m19.07 4.93-1.41 1.41"></path></g></svg>
@@ -55,7 +56,7 @@
         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013 3v1"></path>
         </svg>
-        Logout
+        <%= t('.logout') %>
       <% end %>
     </div>
   </div>
