--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,10 +1,10 @@
-<% content_for :title, "Change Password" %>
+<% content_for :title, t('.change_your_password') %>
 
 <div class="hero lg:min-h-screen bg-base-200">
   <div class="hero-content flex-col lg:flex-row-reverse gap-8">
     <div class="text-center lg:text-left">
-      <h1 class="text-3xl md:text-4xl font-bold">Choose a new password</h1>
-      <p class="py-2 text-base-content/70">Enter a new password for your account.</p>
+      <h1 class="text-3xl md:text-4xl font-bold"><%= t('.change_your_password') %></h1>
+      <p class="py-2 text-base-content/70"><%= t('.subtitle') %></p>
     </div>
 
     <div class="card w-full max-w-md shadow-lg bg-base-100">
@@ -16,20 +16,20 @@
 
           <div class="form-control mb-4">
             <%= f.label :password, class: "input w-full" do %>
-              <span class="label">New password</span>
+              <span class="label"><%= t('.new_password') %></span>
               <%= f.password_field :password, autocomplete: "new-password", required: true %>
             <% end %>
           </div>
 
           <div class="form-control mb-6">
             <%= f.label :password_confirmation, class: "input w-full" do %>
-              <span class="label">Confirm password</span>
+              <span class="label"><%= t('.confirm_new_password') %></span>
               <%= f.password_field :password_confirmation, autocomplete: "new-password", required: true %>
             <% end %>
           </div>
 
           <div class="form-control">
-            <%= f.submit "Change my password", class: "btn btn-primary w-full" %>
+            <%= f.submit t('.change_my_password'), class: "btn btn-primary w-full" %>
           </div>
         <% end %>
 
