--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,10 +1,10 @@
-<% content_for :title, "Reset your password" %>
+<% content_for :title, t('.forgot_your_password') %>
 
 <div class="hero lg:min-h-screen bg-base-200">
   <div class="hero-content flex-col lg:flex-row-reverse gap-8">
     <div class="text-center lg:text-left">
-      <h1 class="text-3xl md:text-4xl font-bold">Reset your password</h1>
-      <p class="py-2 text-base-content/70">Enter your email and we'll send instructions to reset your password.</p>
+      <h1 class="text-3xl md:text-4xl font-bold"><%= t('.forgot_your_password') %></h1>
+      <p class="py-2 text-base-content/70"><%= t('.subtitle') %></p>
     </div>
 
     <div class="card w-full max-w-md shadow-lg bg-base-100">
@@ -14,13 +14,13 @@
 
           <div class="form-control mb-6">
             <%= f.label :email, class: "input w-full" do %>
-              <span class="label">Email</span>
+              <span class="label"><%= resource.class.human_attribute_name(:email) %></span>
               <%= f.email_field :email, autofocus: true, autocomplete: "email", required: true %>
             <% end %>
           </div>
 
           <div class="form-control">
-            <%= f.submit "Send reset instructions", class: "btn btn-primary w-full" %>
+            <%= f.submit t('.send_me_reset_password_instructions'), class: "btn btn-primary w-full" %>
           </div>
         <% end %>
 
