--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,10 @@
-<% content_for :title, "Sign Up" %>
+<% content_for :title, t('.sign_up') %>
 
 <div class="hero lg:min-h-screen bg-base-200">
   <div class="hero-content flex-col lg:flex-row-reverse gap-8">
     <div class="text-center lg:text-left">
-      <h1 class="text-4xl md:text-5xl font-extrabold">Sign Up</h1>
-      <p class="py-2 text-base-content/70">Create your account and join BaseRailsApp.</p>
+      <h1 class="text-4xl md:text-5xl font-extrabold"><%= t('.sign_up') %></h1>
+      <p class="py-2 text-base-content/70">Create your account.</p>
     </div>
 
     <div class="card w-full max-w-md shadow-lg bg-base-100">
@@ -14,30 +14,30 @@
 
           <div class="form-control mb-4">
             <%= f.label :email, class: "input w-full" do %>
-              <span class="label">Email</span>
+              <span class="label"><%= resource.class.human_attribute_name(:email) %></span>
               <%= f.email_field :email, autofocus: true, autocomplete: "email", required: true %>
             <% end %>
           </div>
 
           <div class="form-control mb-4">
             <%= f.label :password, class: "input w-full" do %>
-              <span class="label">Password</span>
+              <span class="label"><%= resource.class.human_attribute_name(:password) %></span>
               <%= f.password_field :password, autocomplete: "new-password", required: true %>
             <% end %>
             <% if @minimum_password_length %>
-              <p class="label">Minimum <%= @minimum_password_length %> characters</p>
+              <p class="label"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></p>
             <% end %>
           </div>
 
           <div class="form-control mb-6">
             <%= f.label :password_confirmation, class: "input w-full" do %>
-              <span class="label">Confirm password</span>
+              <span class="label"><%= resource.class.human_attribute_name(:password_confirmation) %></span>
               <%= f.password_field :password_confirmation, autocomplete: "new-password", required: true %>
             <% end %>
           </div>
 
           <div class="form-control">
-            <%= f.submit "Create account", class: "btn btn-primary w-full" %>
+            <%= f.submit t('.sign_up'), class: "btn btn-primary w-full" %>
           </div>
         <% end %>
 
