--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -2,7 +2,10 @@
   <div class="alert alert-error mb-4">
     <div>
       <span>
-        <strong><%= pluralize(resource.errors.count, "error") %> prohibited this form from being saved:</strong>
+        <strong><%= I18n.t("errors.messages.not_saved",
+                 count: resource.errors.count,
+                 resource: devise_i18n_fix_model_name_case(resource.model_name.human, i18n_key: 'errors.messages.not_saved'))
+        %></strong>
         <ul class="mt-2 list-disc list-inside">
           <% resource.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
