--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
   <div class="hero-content flex-col lg:flex-row-reverse gap-8">
     <div class="text-center lg:text-left">
       <h1 class="text-4xl md:text-5xl font-extrabold"><%= t('.sign_up') %></h1>
-      <p class="py-2 text-base-content/70">Create your account.</p>
+      <p class="py-2 text-base-content/70"><%= t('.subtitle') %></p>
     </div>
 
     <div class="card w-full max-w-md shadow-lg bg-base-100">
